fixed: side padding with collapsed panel

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -2,6 +2,7 @@
   --top-panel-height: 4rem;
   --side-bar-width: 250px;
   --side-bar-collapsed-width: 50px;
+  --collapsed-side-padding: 15px;
 }
 
 body {
